--- a/src/components/Styles/Home.css
+++ b/src/components/Styles/Home.css
@@ -1,3 +1,10 @@
+.root2
+{
+   max-width: 1440px;
+   margin: 0 auto;
+   padding: 0rem;
+   text-align: center;
+}
 .hero {
   align-items: center;
   width: 100%;
@@ -17,7 +24,7 @@
   right: 0rem;
   z-index: -5;
 }
-.hero-text p {
+/* .hero-text p {
   font-size: 4rem;
   font-family: serif;
   margin: 0 0 0 0;
@@ -40,10 +47,10 @@
   border-bottom-left-radius: 15px;
   border-top-right-radius: 15px;
   transition: 0.5s ease-in-out;
-}
-.hero-text h1 {
+} */
+/* .hero-text h1 {
   margin: 0 0 1rem 0;
-}
+} */
 
 .hero-text {
   display: flex;
@@ -59,11 +66,14 @@
 }
 
 .backgroundimgblur {
-  filter: blur(5px);
+  background-color: black;
+  opacity: 5px;
+  filter: blur(3px);
 }
 .spanred {
   color: #eb0028;
 }
+/* 
 .countdiv {
   color: #ffffff;
   width: 100%;
@@ -72,6 +82,28 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+} */
+
+#countdown
+{
+  margin-top: 1.5rem;
+  padding: 1rem;
+  border: 3px solid red;
+  border-radius: 1rem;
+  transition: all 0.8s ease;
+}
+
+#countdown p
+{
+  padding: 3rem;
+}
+
+#countdown:hover
+{
+  font-size: 3rem;
+  border: 4px solid red;
+  padding: 1.5rem;
+  border-radius: 0.5rem;
 }
 
 @media screen and (max-width: 550px) {
