--- a/src/components/Styles/NavbarStyle.css
+++ b/src/components/Styles/NavbarStyle.css
@@ -14,6 +14,8 @@
   height: 70px;
   border-radius: 15px;
   z-index: 500;
+  /* border: 0.1px solid white; */
+  box-shadow: 0 2px 4px rgba(255, 255, 255, 0.2);
 }
 
 .tedx-logo {
