--- a/src/components/Styles/SpeakerCard2.css
+++ b/src/components/Styles/SpeakerCard2.css
@@ -21,6 +21,7 @@
     border-radius: 1rem 1rem 1rem 1rem;
     width: 20rem;
     font-size: medium;
+    margin-right: 2px;
   }
   
   .SpeakerCard-text {
@@ -70,14 +71,15 @@
       margin: 0rem;
       margin-top: 2rem;
       margin-bottom: 2rem;
-      border: 5px solid blue;
+      /* border: 5px solid blue; */
     }
   
     .SpeakerCard-img {
       border-radius: 1rem 1rem 0 0;
-      width: 15rem;
+      width: 14rem;
       height: auto;
       box-shadow: 0 0 20px inset;
+      margin-top: 0.5rem;
     }
   
     .SpeakerCard-text {
