partner name etc

--- a/src/components/Styles/Footer.css
+++ b/src/components/Styles/Footer.css
@@ -4,7 +4,12 @@
   background-color: black;
   color: rgb(240, 236, 236);
   width: auto;
-  height: 20rem;
+  height: 10rem;
+}
+
+.links
+{
+  font-size: 1.5rem;
 }
 
 .footer__links {
@@ -19,6 +24,7 @@
 
 .footer__links a {
   color: red;
+  font-size: 2rem;
   margin-right: 1rem;
   text-decoration: none;
 }
