--- a/src/components/Styles/Home.css
+++ b/src/components/Styles/Home.css
@@ -5,6 +5,18 @@
    padding: 0rem;
    text-align: center;
 }
+
+#registerbutton2
+{
+  display: none;
+}
+
+.mobileregister
+{
+  margin-top: 2rem;
+  display: none;
+}
+
 .hero {
   align-items: center;
   width: 100%;
@@ -24,33 +36,7 @@
   right: 0rem;
   z-index: -5;
 }
-/* .hero-text p {
-  font-size: 4rem;
-  font-family: serif;
-  margin: 0 0 0 0;
-  display: inline-block;
-  width: 33rem;
-  height: 9rem;
-  border: 5px solid #ffffff;
-  border-bottom-left-radius: 15px;
-  border-top-right-radius: 15px;
-  transition: 0.5s ease-in-out;
-}
-.hero-text p:hover {
-  font-size: 5rem;
-  font-family: serif;
-  margin: 0 0 0 0;
-  display: inline-block;
-  width: 40rem;
-  height: 11rem;
-  border: 6px solid red;
-  border-bottom-left-radius: 15px;
-  border-top-right-radius: 15px;
-  transition: 0.5s ease-in-out;
-} */
-/* .hero-text h1 {
-  margin: 0 0 1rem 0;
-} */
+
 
 .hero-text {
   display: flex;
@@ -114,6 +100,17 @@
     left: 0rem;
     z-index: -4;
   }
+
+  #registerbutton2
+{
+  display: block;
+}
+
+#registerbutton
+{
+  display: none;
+}
+
   .hero img {
     width: 100%;
     height: 100%;
